# cursor-manager

./: CONTRIBUTING.md  OPTIMIZATION_SUMMARY.md  README.md  WINDOWS_SETUP.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archive.rs  config.rs  mac.rs  mod.rs  session.rs  system.rs
src/services/: systemMonitor.ts
