[package]
name = "cursor_manager"
version = "0.1.0"
description = "Cursor Session Manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tempfile = "3.10"
fs_extra = "1.3"
tokio = { version = "1.36", features = ["full"] }
# Enhanced dependencies for robustness and safety
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
# System monitoring
sysinfo = "0.30"
# Process management
nix = "0.28"
# Better async utilities
futures = "0.3"
# Configuration validation
validator = { version = "0.18", features = ["derive"] }
# Secure path handling
path-clean = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

